--- a/README
+++ b/README
@@ -1,4 +1,37 @@
+Introduction
+============
+
 LuaGravity is a reactive language that implements the synchronous approach for 
 concurrency.
 It is roughly based on Esterel and FrTime, two synchronous languages, the 
 former having an imperative style, the latter being functional.
+
+Documentation
+=============
+
+Documentation can be found on `doc/index.html`.
+
+Installation
+============
+
+The distribution contains the core language, the meta module and also the 
+DirectFB environment.
+The `meta` module requires the LuaCoco[1] patch for Lua.
+You need also the Lua binding to DirectFB[2].
+
+[1] http://coco.luajit.org/
+[2] http://github.com/fsantanna/ldirectfb
+
+Then unpack LuaGravity to somewhere in your LUA_PATH:
+
+    # cd /somewhere_in_lua_path
+    # tar xvzf luagravity-0.5.tgz
+    # mv luagravity-0.5/ luagravity/
+
+    # cd luagravity/tests
+    # make
+
+    # cd ../examples
+    # lua sky.lua
+    # lua walker.lua
+    # lua game.lua
