^ stop -> kill ^ seconds -> milliseconds - ldirectfb support - assert / error + step model / loop model + deactivate / reactivate + 2nd return is the trigger reactor + call edge + dt returns the diff + support for multiple applications - setEnvironment (use nextEvent) * docs:   + google analytics   ^ API: new functions, some adjusts   ^ intro: new functions, environment, -call, some adjusts

--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,13 @@
+LuaGravity 0.6
+==============
+^ Several changes in the API.
++ `deactivate` and `reactivate` functionality.
++ Support for multiple LuaGravity applications in the same process.
++ Support for the *step execution model*.
+
 LuaGravity 0.5.1
 ================
-+ The simple environment.
++ The `simple` environment.
 
 LuaGravity 0.5
 ==============
