--- a/README
+++ b/README
@@ -14,26 +14,11 @@ Documentation can be found on `doc/index.html`.
 Installation
 ============
 
-The distribution contains the core language, the meta module and also the 
-DirectFB environment.
-The `meta` module requires the LuaCoco[1] patch for Lua.
-You need also the Lua binding to DirectFB[2] if you want to run some examples.
-
-[1] http://coco.luajit.org/
-[2] http://github.com/fsantanna/ldirectfb
-
-Then unpack LuaGravity to somewhere in your LUA_PATH:
+Unpack LuaGravity to somewhere in your LUA_PATH, and run the tests:
 
     # cd /somewhere_in_lua_path
-    # tar xvzf luagravity-0.5.1.tgz
-    # mv luagravity-0.5.1/ luagravity/
+    # tar xvzf luagravity-0.6.tgz
+    # mv luagravity-0.6/ luagravity/
 
     # cd luagravity/tests
     # make
-
-Requires DirectFB:
-
-    # cd ../examples
-    # lua sky.lua
-    # lua walker.lua
-    # lua game.lua
